Update Youtube data extraction using API.ipynb

--- a/Youtube data extraction using API.ipynb
+++ b/Youtube data extraction using API.ipynb
@@ -2666,7 +2666,7 @@
    "id": "3f573a30",
    "metadata": {},
    "source": [
-    "### Perform sentiment analysis using textblob on the retrieved comments"
+    "### Perform sentiment analysis using Vader on the retrieved comments"
    ]
   },
   {
